--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </section>
 
     <section class="container secundaria">
-        <img src="./src/assents/img/Notebook.png" alt="">
+        <img class="secundario_imagem" src="./src/assents/img/Notebook.png" alt="">
         <div class="container__descricao">
             <h2 class="descricao__titulo">Baixe seus cursos</h2>
             <p class="descricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
